--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
                 <img onclick="previousImage(); event.stopPropagation();" class="icon" id="left-icon" src="img/icons/left.svg">
                 <div class="opened-card" id="opened-card"></div>
                 <img onclick="nextImage(); event.stopPropagation();" class="icon" id="right-icon" src="img/icons/right.svg">
+                <div class="hide-icons">
+                    <div class="icons-mobile">
+                        <img onclick="previousImage(); event.stopPropagation();" class="hidden-icon" id="left-icon" src="./img/icons/left.svg">
+                        <img onclick="nextImage(); event.stopPropagation();" class="hidden-icon" id="right-icon" src="./img/icons/right.svg">
+                    </div>
+                </div>
             </div>
         
         
